# agora-agents-python

./: .fernignore  .gitignore  PYTHON-AGENTKIT-SNAKE-CASE-AUDIT.md  README.md  changelog.md  pyproject.toml  reference.md
.fern/: metadata.json
.github/workflows/: ci.yml
compat/agora-agent-server-sdk/: README.md  pyproject.toml
compat/agora-agent-server-sdk/src/agora_agent_server_sdk_compat/: __init__.py
docs/: index.md
docs/concepts/: agent.md  architecture.md  session.md  vendors.md
docs/getting-started/: authentication.md  installation.md  quick-start.md
docs/guides/: advanced.md  agent-builder-features.md  avatars.md  byok.md  cascading-flow.md  mllm-flow.md  regional-routing.md
docs/reference/: agent.md  client.md  errors.md  session.md  vendors.md
scripts/: check_release_workflow.py
src/agora_agent/: __init__.py  client.py  cn.py  pool_client.py
src/agora_agent/agent_management/: client.py  raw_client.py
src/agora_agent/agentkit/: __init__.py  agent.py  agent_session.py  avatar_types.py  constants.py  presets.py  region_validation.py  regional_agent.py
src/agora_agent/types/: asr.py  (+102 more)
tests/custom/: readme.py  test_agentkit_agent.py  test_agentkit_session.py  test_agentkit_vendors.py  test_anam_avatar.py  test_avatar_token.py  test_client.py  test_docs_snake_case.py  test_helpers.py  test_llm_vendors.py  test_pipeline_id.py  test_preset_inference.py  test_regional_vendors.py  test_request_body.py  test_root_exports.py  test_sensetime_avatar.py  test_spatius_avatar.py  test_stt_language.py  test_tts_vendors.py  test_vendor_collapse_golden.py
(+48 files in other folders)
